--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://github.com/toolshedr/toolshedr">
+<meta http-equiv="refresh" content="0; url=https://github.com/toolshedr">
 </head>
 </html>
